CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
# Avoid warnings in higher versions
IF("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" GREATER 2.6)
 CMAKE_POLICY(VERSION 2.8)
ENDIF()

INCLUDE(FindJava.cmake)
INCLUDE(UseJava.cmake)

SET(CMAKE_JAVA_COMPILE_CLASSPATH ${GLIESE_HOME_LIB}/goldilocks6.jar)
SET(CMAKE_JAVA_COMPILE_FLAGS -sourcepath src)
SET(CMAKE_JAVA_MANIFEST_FILE META-INF/MANIFEST.MF)
ADD_JAR(tablediff ${GLIESE_HOME_BIN} 
              src/sunje/goldilocks/tool/diff/*.java)

IF(${CMAKE_TARGET_HOST_TYPE} MATCHES "server")
  INSTALL( DIRECTORY ${GLIESE_HOME_BIN}/ DESTINATION ${INSTALL_BINDIR} FILES_MATCHING PATTERN "*.jar" )
ENDIF()
