CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

#set the Standard Library
SET (ST_LIBRARY st)
LINK_DIRECTORIES (${PRODUCT_LAYER_STANDARD_DIR}/dev/lib)

# include directories
INCLUDE_DIRECTORIES(${PRODUCT_LAYER_STANDARD_DIR}/dev/include)

#define a macro to simplify adding tests, then use it
MACRO (DO_TEST ARG)
  ADD_EXECUTABLE( test${ARG} test${ARG}.c )
  TARGET_LINK_LIBRARIES (test${ARG} ${ST_LIBRARY})
  ADD_TEST (${ARG} test${ARG})
  SET_TESTS_PROPERTIES( ${ARG}
    PROPERTIES PASS_REGULAR_EXPRESSION
    "PASS")
ENDMACRO (DO_TEST)

MACRO (DO_DIFF ARG)
  ADD_EXECUTABLE( test${ARG} test${ARG}.c )
  TARGET_LINK_LIBRARIES (test${ARG} ${ST_LIBRARY})
  ADD_TEST ( ${ARG} udiff test${ARG} test${ARG} )
  SET_TESTS_PROPERTIES( ${ARG}
    PROPERTIES PASS_REGULAR_EXPRESSION
    "PASS")
ENDMACRO (DO_DIFF)

SET( STC_PARSER_GRAMMER_PREFIX, "test" )

# UNIT TEST
ADD_EXECUTABLE( testPassfd testPassfd.c )
TARGET_LINK_LIBRARIES( testPassfd ${ST_LIBRARY} )
ADD_EXECUTABLE( testIb testIb.c )
TARGET_LINK_LIBRARIES( testIb ${ST_LIBRARY} )
